--- a/wp-content/themes/contabilidad/assets/css/cont.css
+++ b/wp-content/themes/contabilidad/assets/css/cont.css
@@ -243,7 +243,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .container-information {
-  padding: 60px 0px;
+  padding: 60px 0px 0px;
 }
 .container-information .container-information-title {
   color: #50449A;
